# armcc_vscode_demos

./: README.md
01uart_question_makefile/: common_config.mk  main.c  start.s  stringtool.c
01uart_question_makefile/Include/: uart.h
02uart_sct_makefile/: app.sct  common_compile.mk  common_config.mk  main.c  start.s  stringtool.c
03uart_clear_bss_makefile/: app.map  app.sct  main.c  start.s
04uart_text_makefile/: Makefile  app.map  app.sct  common_config.mk  main.c  start.s
04uart_text_makefile/Include/: stringtool.h
05uart_c_relocate_makefile/: app.map  main.c  start.s  stringtool.c  uart.c
led_asm_demo/: CMakeLists.txt  armcc-toolchain.cmake  start.s
led_demo/: CMakeLists.txt  main.c  start.s
uart_demo/: CMakeLists.txt  CMakePresets.json  armcc-toolchain.cmake  main.c  start.s
